# project-artemis

./: .dockerignore  .env.example  .gitignore  .gitmodules  .mcp.json  AGENT.md  CLAUDE.local.example.md  CLAUDE.md  Dockerfile  LICENSE  README.md  analysis.md  docker-compose.yml  pyproject.toml  requirements.txt
.agent/skills/: artemis
.claude/: CLAUDE.md  settings.json
.claude-plugin/: plugin.json
.claude/agents/: artemis-orchestrator.md  telegram-handler.md
.claude/hooks/: check-context.sh  load-hot-memory.sh  sync-extended.sh
.claude/tools/: db.py  export_personal.py  generate_resume_docx.py  import_personal.py  push_to_telegram.py  relay_ask.py  sync_contacts.py  sync_state.py
agents/: __init__.py  api.py  config.py  graph.py  llm.py  orchestrator.md  state.py
agents/nodes/: __init__.py  analyst.py  artisan.py  diplomat.py  networker.py  orchestrator.py  scout.py
agents/prompts/: analyst.md  artisan.md  scout.md
agents/tools/: __init__.py  github_tools.py  google_tools.py  scraping_tools.py  supabase_tools.py  vector_tools.py
api/: server.py
api/modules/: channel.py  config.py  middleware.py  relay_queue.py  scheduler.py  task_manager.py  telegram.py
applications/Anthropic-ClaudeCodePM/: cover_letter.md  primer.md  resume.md
applications/anthropic-pm-claude-code/: cover_letter.md  primer.md  resume.md
applications/anthropic-research-pm-model-behaviors/: cover_letter.md  primer.md  resume.md
applications/cohere-platform-experience-pm/: cover_letter.md  primer.md  resume.md
applications/openai-pm-api-agents/: cover_letter.md  primer.md  resume.md
bot/: bot.py
channels/artemis-channel/: index.ts  package.json
channels/artemis-webhook/: .mcp.json  index.ts  package.json
db/migrations/: 001_initial_schema.sql  002_allow_anon.sql  003_optional_company.sql  (+22 more)
docs/: UI_WALKTHROUGH.md  architecture.md  automation.md  getting-started.md  telegram-relay-design.md  workflows.md
frontend/: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
hooks/: hooks.json  session-start.sh  session-stop.sh
ingestion/: __init__.py  alex-jansen-resume (4).json  claude_ingest.py  coaching_state (1).md  drive_ingest.py  embedder.py  github_ingest.py  portfolio_ingest.py  substack_ingest.py
nginx/: artemis.conf
rules/: data-handling.md  pipeline-workflow.md
scripts/: list_models.py  restart-orchestrator.sh  run_agents.py  run_ingest.py  run_scout.py  setup-nginx.sh  setup.sh  start.sh  stop.sh  test_genai_models.py  test_scout_llm_tools.py  test_search_grounding.py
tests/: conftest.py  test_admin_approval.py  test_analyst.py  test_ingestion.py  test_redraft_resume_api.py  test_upload_artifact_upsert.py
tools/: artifact_sync.py  auth.py  backfill_user_id.py  db.py  export_personal.py  generate_resume_docx.py  import_personal.py  migrate_state.py  migrate_user.py  push_to_telegram.py  state_sync.py  sync_contacts.py
(+118 files in other folders)
