[project]
name = "project-artemis"
version = "0.2.0"
description = "Job hunting copilot — Claude Code skill with Supabase persistence"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Alex Jansen" }]

dependencies = [
    # Database
    "supabase>=2.0.0",
    # HTTP
    "httpx>=0.28.0",
    # Utilities
    "python-dotenv>=1.0.0",
]

# No build system — this is a Claude Code skill, not a Python package.
# Dependencies are installed via `uv` for the db.py helper script.
