[project]
name = "project-artemis"
version = "0.2.0"
description = "Job hunting copilot — Claude Code skill with Supabase persistence"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Alex Jansen" }]

dependencies = [
    # Database
    "supabase>=2.0.0",
    # HTTP
    "httpx>=0.28.0",
    # Utilities
    "python-dotenv>=1.0.0",
    # API Server
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    # Resume generation (DOCX → PDF via LibreOffice)
    "python-docx>=1.2.0",
    "docxtpl>=0.20.2",
]

# No build system — this is a Claude Code skill, not a Python package.
# Use `uv run` to execute scripts; `uv add` to add dependencies.
